# tools

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  hackerai.py  pyproject.toml  requirements.txt  run.bat  run.sh
01-network/: banner_grabber.py  dns_zone_transfer.py  ldap_scanner.py  network_scanner.py  port_scanner.py  reverse_proxy_analyzer.py  smb_scanner.py  snmp_scanner.py  subdomain_enum.py
02-webapp/: api_fuzzer.py  backup_finder.py  cms_detector.py  cookie_analyzer.py  directory_bruteforce.py  git_exposure.py  sqli_tester.py  web_scanner.py  wordpress_scanner.py  xss_scanner.py
03-password/: ftp_bruteforce.py  hash_cracker.py  hash_identifier.py  http_bruteforce.py  password_generator.py  rdp_bruteforce.py  ssh_bruteforce.py
04-exploitation/: command_injection.py  cors_tester.py  csrf_tester.py  cve_finder.py  exploit_finder.py  file_upload_tester.py  idor_tester.py  jwt_analyzer.py  lfi_tester.py  listener.py  msfvenom_helper.py  payload_generator.py  persistence.py  shellcode_encoder.py  ssti_scanner.py  waf_detector.py  web_shell_generator.py  xxe_tester.py
05-osint/: email_harvester.py  google_dorker.py  osint_tool.py  username_finder.py
06-wireless/: bluetooth_scanner.py  mac_changer.py  packet_sniffer.py  wifi_cracker.py  wifi_deauth.py  wifi_scanner.py
07-spoofing/: arp_spoofer.py  dhcp_spoofer.py  dns_spoofer.py  netcut.py
08-postexploit/: credential_harvester.py  dll_hijacker.py  kernel_exploit_checker.py  keylogger.py  lin_privesc.py  log_cleaner.py  screenshot.py  win_privesc.py
09-misc/: ddos_tool.py  http_fuzzer.py  network_discovery.py  report_generator.py  ssl_scanner.py  steganography.py  stego_detector.py  vuln_db.py
10-cloud/: aws_enum.py  azure_enum.py  gcp_enum.py
11-containers/: docker_enum.py  k8s_enum.py
12-forensics/: disk_analyzer.py  memory_dump.py  registry_reader.py
13-tunnel/: dns_tunnel.py  icmp_tunnel.py  port_forward.py
devhibernate/: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod
hackerai/: __init__.py  config.py  logger.py
malware/: adware.py  botnet.py  cryptojacker.py  ddos.py  fileless-malware.py  keylogger.py  mobile-banking-trojan.py  ransomeware.py  rat.py  rootkit.py  spyware.py  stealer.py  trojan.py  virus.py  wiper.py  worm.py
ocysint/: README.md  requirements.txt  run.bat  run.py  run.sh
tests/: __init__.py  test_config.py  test_hash_cracker.py  test_hash_identifier.py  test_lfi_tester.py  test_password_generator.py  test_port_scanner.py  test_sqli_tester.py
webapp/: app.py
wordlists/: common.txt  passwords.txt  usernames.txt  (+1 more)
(+62 files in other folders)
