[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackerai-tools"
version = "2.0.0"
description = "Koleksi tools hacking dan penetration testing dalam Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ocysec", email = "admin@ocysec.id"}
]
keywords = ["pentest", "security", "hacking", "infosec", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "scapy>=2.5.0",
    "paramiko>=3.0.0",
    "beautifulsoup4>=4.11.0",
    "Pillow>=9.0.0",
    "pynput>=1.7.0",
    "dnspython>=2.4.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]
all = [
    "tabulate>=0.9.0",
    "termcolor>=2.3.0",
    "python-nmap>=0.7.1",
]

[project.scripts]
hackerai = "hackerai:main"

[project.urls]
Homepage = "https://github.com/ocysec/tools-hacking"
Documentation = "https://github.com/ocysec/tools-hacking#readme"
Repository = "https://github.com/ocysec/tools-hacking"
Issues = "https://github.com/ocysec/tools-hacking/issues"

[tool.setuptools]
packages = ["hackerai"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.pytest_cache
    | \.mypy_cache
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "requires_root: marks tests requiring root/admin",
    "requires_network: marks tests requiring network",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
